# klartext-app

./: .gitignore  Package.swift  README.md  index.html  klartext.key.pub  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
.cursor/rules/: release-process.mdc
.github/workflows/: release.yml
KlartextSwift/: Info.plist
KlartextSwift/App/: KlartextApp.swift
KlartextSwift/Models/: AppSettings.swift  AppState.swift  TabModel.swift
KlartextSwift/Resources/: AppIcon.icns
KlartextSwift/Resources/editor/: codemirror.bundle.js  index.html
KlartextSwift/Services/: FileService.swift  FormatterService.swift  OutlineService.swift  UpdateChecker.swift  UpdaterService.swift
KlartextSwift/Views/: BreadcrumbsView.swift  ContentView.swift  DiffView.swift  EditorWebView.swift  SearchBarView.swift  SettingsView.swift  SidebarView.swift  StatusBarView.swift  TabBarView.swift  ToolbarView.swift
docs/: INSTALL.md  UPDATE-SIGNING.md
editor-bundle/: build.mjs  editor.mjs  package-lock.json  package.json
packaging/homebrew/Casks/: klartext.rb
scripts/: ensure-windows-ico.mjs  gen-icons.mjs  update-homebrew-cask.mjs  update-version.mjs
src/: App.tsx  Breadcrumbs.tsx  DiffEditorView.tsx  DocumentOutline.tsx  Editor.tsx  ErrorBoundary.tsx  StatusBar.tsx  TitleBar.tsx  fileService.ts  formatters.ts  index.css  outline.ts  useDragDrop.ts  usePersistedTabs.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: allow-read-dropped-file.toml
src-tauri/src/: lib.rs  main.rs
(+1 files in other folders)
